fixed wrapping of skin name input

--- a/styles.css
+++ b/styles.css
@@ -215,7 +215,7 @@ body {
     width: 5em;
 }
 #tab-code .skin-name-label {
-    margin-left: 2em;
+    margin-left: 5px;
 }
 .color-space {
     position: relative;
